# onepassword-sdk-python

./: .gitignore  MANIFEST.in  Makefile  README.md  client.py  core.py  main.py  pydoc-markdown.yml  pyproject.toml  run_example.sh  secrets_api.py  setup.py  version  version-build  version.py
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: 1-bug-report.yml  2-improvement.yml  3-feature-request.yml  config.yml
.github/workflows/: ok-to-test.yml  prep-release.yml  prepare-release.yml  release.yml  sdk-release.yml  validate.yml  wheels.yml
docs/reference/: sidebar.json
example/: README.md  desktop_app.py  example.py  item_crud_operation.py  list_items_in_vaults.py  list_vaults.py  resolve_secret_reference.py  validate_secret_reference.py
examples/: README.md  example.py
lib/op_uniffi_core_mac_arm64/: MANIFEST.in  setup.py
onepassword/: client.py  secrets_api.py
op_uniffi_core_linux_amd64/: setup.py
op_uniffi_core_mac_arm64/: setup.py
release/: .version  .version-build  Makefile
release/release-scripts/: python-release.sh  sdk-release.sh
release/version_swap/: Cargo.toml
scripts/: generate_docs.sh  prep-release.sh  python_release.sh  release.sh
sdk/: pyproject.toml  setup.py
sdk/onepassword/: __init__.py  client.py  core.py  test_client.py
src/onepassword/: __init__.py  build_number.py  client.py  config.py  core.py  defaults.py  desktop_core.py  environments.py  errors.py  example.py  groups.py  items.py  (+12 more)
templates/: defaults.tpl.py  setup.tpl.py
tests/: README.md  run_all_tests.sh  test.py  test_list_items_in_vaults.py  test_list_vaults.py  test_resolve_secret_reference.py  test_validate_secret_reference.py
(+24 files in other folders)
